--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "submodules/kicad/code"]
-	path = submodules/kicad/code
+[submodule "submodules/kicad/code/kicad"]
+	path = submodules/kicad/code/kicad
 	url = https://gitlab.com/kicad/code/kicad.git/
