--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/kicad/code/kicad"]
 	path = submodules/kicad/code/kicad
 	url = https://gitlab.com/kicad/code/kicad.git/
+[submodule "submodules/tpaviot/oce"]
+	path = submodules/tpaviot/oce
+	url = https://github.com/tpaviot/oce
